--- a/YumyumgoodApp/app/src/main/res/layout/write_review.xml
+++ b/YumyumgoodApp/app/src/main/res/layout/write_review.xml
@@ -66,6 +66,7 @@
 
         <LinearLayout
             android:id="@+id/menu1"
+            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -100,6 +101,7 @@
 
         <LinearLayout
             android:id="@+id/menu2"
+            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
