--- a/YumyumgoodApp/app/src/main/res/layout/write_review.xml
+++ b/YumyumgoodApp/app/src/main/res/layout/write_review.xml
@@ -71,6 +71,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="100dp"
@@ -106,6 +107,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="126dp"
@@ -141,6 +143,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="109dp"
@@ -188,6 +191,7 @@
             android:background="@drawable/review_border"
             android:maxLength="300"
             android:gravity="top"
+            android:padding="15dp"
             android:hint="주문한 메뉴와 식당의 시설은 어떠셨나요? "
             android:textSize="14dp"/>
 
@@ -196,8 +200,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginRight="15dp"
-            android:hint="  / 300 "
+            android:layout_marginRight="14dp"
+            android:layout_marginTop="3dp"
+            android:hint="최대 300자 "
             android:textSize="14dp"/>
 
     </LinearLayout>
