--- a/YumyumgoodApp/app/src/main/res/drawable/thumbs_down.xml
+++ b/YumyumgoodApp/app/src/main/res/drawable/thumbs_down.xml
@@ -7,8 +7,8 @@
     <item
         android:state_window_focused="false"
         android:state_enabled="true"
-        android:drawable="@drawable/down"/>
+        android:drawable="@drawable/dislike_no_bg"/>
     <item
         android:state_enabled="true"
-        android:drawable="@drawable/down"/>
+        android:drawable="@drawable/dislike_no_bg"/>
 </selector>
