--- a/YumyumgoodApp/app/src/main/res/drawable/thumbs_up.xml
+++ b/YumyumgoodApp/app/src/main/res/drawable/thumbs_up.xml
@@ -7,8 +7,8 @@
     <item
         android:state_window_focused="false"
         android:state_enabled="true"
-        android:drawable="@drawable/up"/>
+        android:drawable="@drawable/like_no_bg"/>
     <item
         android:state_enabled="true"
-        android:drawable="@drawable/up"/>
+        android:drawable="@drawable/like_no_bg"/>
 </selector>
