--- a/YumyumgoodApp/app/src/main/res/layout/write_review.xml
+++ b/YumyumgoodApp/app/src/main/res/layout/write_review.xml
@@ -86,6 +86,7 @@
                 android:padding="0dp"
                 android:scaleType="centerCrop"
                 android:layout_marginLeft="30dp"
+                android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/thumbs_up"/>
 
             <ImageButton
@@ -95,6 +96,7 @@
                 android:layout_marginLeft="10dp"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
+                android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/thumbs_down" />
 
 
@@ -122,7 +124,7 @@
                 android:padding="0dp"
                 android:scaleType="centerCrop"
                 android:layout_marginLeft="30dp"
-
+                android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/thumbs_up"/>
 
             <ImageButton
@@ -132,6 +134,7 @@
                 android:layout_marginLeft="10dp"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
+                android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/thumbs_down" />
 
 
@@ -158,7 +161,7 @@
                 android:padding="0dp"
                 android:scaleType="centerCrop"
                 android:layout_marginLeft="30dp"
-
+                android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/thumbs_up"/>
 
             <ImageButton
@@ -168,6 +171,7 @@
                 android:layout_marginLeft="10dp"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
+                android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/thumbs_down" />
 
 
