--- a/YumyumgoodApp/app/src/main/res/layout/order_history.xml
+++ b/YumyumgoodApp/app/src/main/res/layout/order_history.xml
@@ -43,7 +43,7 @@
                 android:layout_marginLeft="14dp"
                 android:layout_marginTop="20dp"
                 android:layout_width="380dp"
-                android:layout_height="180dp">
+                android:layout_height="190dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -72,9 +72,17 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="220dp"
                             android:layout_marginTop="25dp"
-                            android:text="2일 전"
+                            android:text="2"
                             android:textColor="#000000"
                             android:textSize="12dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="25dp"
+                            android:textSize="12dp"
+                            android:text=" 일 전" />
+
 
                     </LinearLayout>
 
@@ -107,20 +115,23 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/btm"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/center"
                         app:layout_constraintLeft_toLeftOf="parent"
                         android:layout_margin="20dp"
                         android:orientation="horizontal">
-                        <Button
+                        <ImageButton
                             android:id="@+id/btnWriteReview"
                             android:text="리뷰 작성"
-                            android:background="#97C7ED"
+                            android:src="@drawable/review_available"
                             android:layout_marginLeft="15dp"
                             android:layout_marginRight="20dp"
                             android:layout_width="90dp"
                             android:textSize="13dp"
+                            android:padding="0dp"
+                            android:scaleType="centerCrop"
                             android:layout_height="40dp"/>
                         <Button
                             android:id="@+id/btnDetailHistory"
@@ -137,6 +148,23 @@
                             android:layout_width="90dp"
                             android:textSize="13dp"
                             android:layout_height="40dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/btm"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/msg_pass"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="32dp"
+                            android:layout_marginTop="3dp"
+                            android:textSize="12dp"
+                            android:text=" "/>
                     </LinearLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -178,9 +206,16 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="220dp"
                             android:layout_marginTop="25dp"
-                            android:text="5일 전"
+                            android:text="5"
                             android:textColor="#000000"
                             android:textSize="12dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="25dp"
+                            android:textSize="12dp"
+                            android:text=" 일 전" />
 
                     </LinearLayout>
 
@@ -220,13 +255,16 @@
                         app:layout_constraintLeft_toLeftOf="parent"
                         android:layout_margin="20dp"
                         android:orientation="horizontal">
-                        <Button
+                        <ImageButton
                             android:id="@+id/btnWriteReview2"
                             android:text="리뷰 작성"
                             android:background="#D4D8DC"
                             android:layout_marginLeft="15dp"
                             android:layout_marginRight="20dp"
                             android:layout_width="90dp"
+                            android:src="@drawable/review_available"
+                            android:padding="0dp"
+                            android:scaleType="centerCrop"
                             android:textSize="13dp"
                             android:layout_height="40dp"/>
                         <Button
@@ -254,12 +292,13 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/msg_pass2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="32dp"
                             android:layout_marginTop="3dp"
                             android:textSize="12dp"
-                            android:text="리뷰 작성 가능 기간이 지났습니다."/>
+                            android:text=" "/>
                     </LinearLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -301,9 +340,16 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="220dp"
                             android:layout_marginTop="25dp"
-                            android:text="8일 전"
+                            android:text="8"
                             android:textColor="#000000"
                             android:textSize="12dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="25dp"
+                            android:textSize="12dp"
+                            android:text=" 일 전" />
 
                     </LinearLayout>
 
@@ -336,19 +382,24 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@id/bottom"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/center"
                         app:layout_constraintLeft_toLeftOf="parent"
                         android:layout_margin="20dp"
                         android:orientation="horizontal">
-                        <Button
+
+                        <ImageButton
                             android:id="@+id/btnWriteReview3"
                             android:text="리뷰 작성"
                             android:background="#D4D8DC"
                             android:layout_marginLeft="15dp"
                             android:layout_marginRight="20dp"
                             android:layout_width="90dp"
+                            android:src="@drawable/review_available"
+                            android:padding="0dp"
+                            android:scaleType="centerCrop"
                             android:textSize="13dp"
                             android:layout_height="40dp"/>
                         <Button
@@ -371,17 +422,18 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/center"
+                        app:layout_constraintTop_toBottomOf="@id/bottom"
                         app:layout_constraintLeft_toLeftOf="parent"
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/msg_pass3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="32dp"
-                            android:layout_marginTop="73dp"
+                            android:layout_marginTop="3dp"
                             android:textSize="12dp"
-                            android:text="리뷰 작성 가능 기간이 지났습니다."/>
+                            android:text=" "/>
                     </LinearLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -423,9 +475,16 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="220dp"
                             android:layout_marginTop="25dp"
-                            android:text="9일 전"
+                            android:text="9"
                             android:textColor="#000000"
                             android:textSize="12dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="25dp"
+                            android:textSize="12dp"
+                            android:text=" 일 전" />
 
                     </LinearLayout>
 
@@ -458,19 +517,23 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/bottom2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/center"
                         app:layout_constraintLeft_toLeftOf="parent"
                         android:layout_margin="20dp"
                         android:orientation="horizontal">
-                        <Button
+                        <ImageButton
                             android:id="@+id/btnWriteReview4"
                             android:text="리뷰 작성"
                             android:background="#D4D8DC"
                             android:layout_marginLeft="15dp"
                             android:layout_marginRight="20dp"
                             android:layout_width="90dp"
+                            android:src="@drawable/review_available"
+                            android:padding="0dp"
+                            android:scaleType="centerCrop"
                             android:textSize="13dp"
                             android:layout_height="40dp"/>
                         <Button
@@ -493,17 +556,18 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@id/center"
+                        app:layout_constraintTop_toBottomOf="@id/bottom2"
                         app:layout_constraintLeft_toLeftOf="parent"
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/msg_pass4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="32dp"
-                            android:layout_marginTop="73dp"
+                            android:layout_marginTop="3dp"
                             android:textSize="12dp"
-                            android:text="리뷰 작성 가능 기간이 지났습니다."/>
+                            android:text=" "/>
                     </LinearLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -512,10 +576,6 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
-
-
-
     </ScrollView>
-
 
 </LinearLayout>
