--- a/YumyumgoodApp/app/src/main/res/layout/write_review.xml
+++ b/YumyumgoodApp/app/src/main/res/layout/write_review.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_marginLeft="135dp"
+        android:layout_marginStart="135dp"
         android:layout_marginTop="40dp"
         android:layout_width="150dp"
         android:layout_height="50dp"
@@ -23,8 +23,8 @@
         android:layout_height="wrap_content"
         android:text="리뷰 작성"
         android:textColor="#000000"
-        android:textSize="18dp"
-        android:layout_marginLeft="174dp"
+        android:textSize="18sp"
+        android:layout_marginStart="174dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"/>
 
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:text="학식 건물" />
 
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:textColor="#000000"
             android:layout_marginTop="5dp"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:text=" : 308 관 " />
 
         <TextView
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="40dp"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="100dp"
                 android:textColor="#000000"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="토마토 스파게티" />
 
             <ImageButton
@@ -93,7 +93,7 @@
                 android:id="@+id/dislike1"
                 android:layout_width="50dp"
                 android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
                 android:backgroundTint="#00FFFFFF"
@@ -112,9 +112,9 @@
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="126dp"
+                android:layout_marginEnd="126dp"
                 android:textColor="#000000"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="베이컨 피자" />
 
             <ImageButton
@@ -123,7 +123,7 @@
                 android:layout_height="30dp"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/thumbs_up"/>
 
@@ -131,7 +131,7 @@
                 android:id="@+id/dislike2"
                 android:layout_width="50dp"
                 android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
                 android:backgroundTint="#00FFFFFF"
@@ -149,9 +149,9 @@
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="109dp"
+                android:layout_marginEnd="109dp"
                 android:textColor="#000000"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:text="불닭 마요 덮밥" />
 
             <ImageButton
@@ -160,7 +160,7 @@
                 android:layout_height="30dp"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
-                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/thumbs_up"/>
 
@@ -168,7 +168,7 @@
                 android:id="@+id/dislike3"
                 android:layout_width="50dp"
                 android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:padding="0dp"
                 android:scaleType="centerCrop"
                 android:backgroundTint="#00FFFFFF"
@@ -182,7 +182,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="5dp"
@@ -197,17 +197,17 @@
             android:gravity="top"
             android:padding="15dp"
             android:hint="주문한 메뉴와 식당의 시설은 어떠셨나요? "
-            android:textSize="14dp"/>
+            android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginRight="14dp"
+            android:layout_marginEnd="14dp"
             android:layout_marginTop="3dp"
             android:hint="최대 300자 "
-            android:textSize="14dp"/>
+            android:textSize="14sp"/>
 
     </LinearLayout>
 
@@ -216,7 +216,7 @@
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:text="리뷰 제출"
-        android:layout_marginLeft="264dp"
+        android:layout_marginStart="264dp"
         android:background="#97C7ED"/>
 
 
